Adding index.js
Setting up index.js. Adding event listener to input field and button.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" id="input-text" placeholder="">
+        <input type="text" id="input-text" placeholder="Add me">
         <button id="add-btn">Add to the list</button>
         <ul id="shopping-list"></ul>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
