--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping List</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
+        <img src="assets/shopping-cart.png">
         <input type="text" id="input-text" placeholder="Add me">
-        <button id="add-btn">Add to the list</button>
+        <button id="add-btn">Add me</button>
         <ul id="shopping-list"></ul>
     </div>
     <script src="index.js"></script>
