--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container">
         <img src="assets/shopping-cart.png">
-        <input type="text" id="input-text" placeholder="Add me">
-        <button id="add-btn">Add me</button>
+        <input type="text" id="input-text" placeholder="Shopping List ...">
+        <button id="add-btn">Add Me!</button>
         <ul id="shopping-list"></ul>
     </div>
     <script src="index.js"></script>
