--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <button id="add-btn">Add Me!</button>
         <ul id="shopping-list"></ul>
     </div>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
