--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping List</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="container">
-        <img src="assets/shopping-cart.png">
-        <input type="text" id="input-text" placeholder="Shopping List ...">
-        <button id="add-btn">Add Me!</button>
-        <ul id="shopping-list"></ul>
-    </div>
-    <script src="index.js" type="module"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Shopping List</title>
+        <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="container">
+            <img src="assets/shopping-cart.png">
+            <input type="text" id="input-text" placeholder="Shopping List ...">
+            <button id="add-btn">Add Me!</button>
+            <ul id="shopping-list">
+                <li>Oranges</li>
+                <li>Milks</li>
+            </ul>
+        </div>
+        <script src="index.js" type="module"></script>
+    </body>
 </html>
