Add snapshot, clear shopping list element functions
Add onValue, firebase snapshot and clearing html field function.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
             <img src="assets/shopping-cart.png">
             <input type="text" id="input-text" placeholder="Shopping List ...">
             <button id="add-btn">Add Me!</button>
-            <ul id="shopping-list">
-                <li>Oranges</li>
-                <li>Milks</li>
-            </ul>
+            <ul id="shopping-list"></ul>
         </div>
         <script src="index.js" type="module"></script>
     </body>
