--- a/index.html
+++ b/index.html
@@ -22,4 +22,7 @@
         </div>
         <script src="index.js" type="module"></script>
     </body>
+    <foot>
+        <p>Made by Dustin</p>
+    </foot>
 </html>
